# beval

./: .gitignore  CLAUDE.md  COMPATIBILITY.md  GUIDE.md  LICENSE  Makefile  README.md  SPEC.md
.claude/agents/: beval-runner.md
.claude/skills/evaluate/: SKILL.md
.github/: copilot-instructions.md
.github/workflows/: ci-dotnet.yml  ci-go.yml  ci-python.yml  ci-typescript.yml  conformance.yml
conformance/: README.md  runner.sh
conformance/fixtures/basic-deterministic/: expected.json  input.yaml
conformance/fixtures/config-override/: config.yaml  expected.json  input.yaml
conformance/fixtures/mixed-scores/: expected.json  input.yaml
conformance/fixtures/multi-case-aggregation/: expected.json  input.yaml
conformance/fixtures/multi-stage-failure/: expected.json  input.yaml
conformance/fixtures/optimistic-skip-mode/: config.yaml  expected.json  input.yaml
conformance/fixtures/scoring-aggregation/: expected.json  (+1 more)
dotnet/: Beval.sln  Directory.Build.props  Directory.Packages.props  README.md
go/: .gitignore  README.md  beval.go  beval_test.go  dsl.go  go.mod  judge.go  loader.go  loader_test.go  reporter.go  runner.go  schema.go  subject.go  tracing.go  types.go
go/graders/: graders.go
python/: .gitignore  README.md  pyproject.toml
python/src/beval/: __init__.py  __main__.py  baseline.py  cache.py  cli.py  dsl.py  judge.py  loader.py  reporter.py  runner.py  schema.py  subject.py  tracing.py  types.py
python/src/beval/adapters/: __init__.py  a2a.py  acp.py  custom.py
python/src/beval/conversation/: __init__.py  actor.py  dashboard.py  runner.py  simulator.py  types.py
python/src/beval/graders/: __init__.py  ai_judged.py  deterministic.py  process.py
python/tests/: conftest.py  test_adapters.py  test_baseline.py  test_cache.py  test_cli.py  test_conformance.py  test_conversation.py  test_dashboard.py  test_dsl.py  test_graders.py  test_judge.py  test_loader.py  test_reporter.py  test_runner.py  test_types.py
samples/dt-coach/: README.md  agent-tcp.yaml  agent.yaml  eval.config.yaml  results
samples/dt-coach-conversation/: README.md  eval.config.yaml  goals.yaml  personas.yaml
samples/klingon-agent/: README.md  agent-local.yaml  agent.yaml  server.py
samples/klingon-conversation/: README.md  criteria.yaml  eval.config.yaml  goals.yaml  personas.yaml
samples/smart-inventory-advisor/: README.md  agent-tcp.yaml  agent.yaml  eval.config.yaml
spec/: agent-adapters.spec.md  claude-code-integration.spec.md  cli.spec.yaml  conversation-sim.spec.md  judges.spec.md  otel-conventions.md
spec/schemas/: agent.schema.json  case.schema.json  comparison.schema.json  config.schema.json  conversation-results.schema.json  personas-goals.schema.json  results.schema.json
typescript/: .gitignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json  tsup.config.ts
typescript/src/: cli.ts  dsl.ts  index.ts  judge.ts  loader.ts  reporter.ts  runner.ts  schema.ts  subject.ts  tracing.ts  types.ts
typescript/tests/: loader.test.ts  types.test.ts
(+58 files in other folders)
